[project]
name = "startrails"
version = "0.1.1"
description = "startrails"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "deferred-import>=0.1.0",
    "exif>=1.6.1",
    "jsonpickle==4.0.1",
    "numpy",
    "nvidia-ml-py>=13.580.82",
    "opencv-python-headless>=4.11",
    "openvino",
    "pillow",
    "psutil==6.1.1",
    "pyside6==6.8.2",
    "sahi==0.11.20",
    "scikit-image>=0.25.2",
    "shapely==2.0.7",
    "torch>=2.6.0",
    "ultralytics==8.3.79",
    "tqdm",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
]
cu118 = [
  "torch>=2.6.0",
  "cupy-cuda11x==13.3.0",
]
cu124 = [
  "torch>=2.6.0",
  "cupy-cuda12x==13.3.0",
]
cu133 = [
  "torch>=2.6.0",
  "cupy-cuda13x==13.6.0",
]
mps = [
  "torch>=2.6.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu124" },
    { extra = "cu133" },
    { extra = "mps" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu130", extra = "cu133" },
  { index = "pytorch-cpu", extra = "mps" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
